# stream-chat-reader

./: .gitignore  build.sh  dev.sh  run.sh
backend/: Cargo.toml
backend/src/: main.rs  models.rs  utils.rs
frontend/: vite.config.ts
frontend/src/lib/: shared.svelte.ts
frontend/src/lib/components/: approve-queue.svelte  message-display.svelte  message-list.svelte  message.svelte  settings.svelte
frontend/src/lib/styles/: global.css
frontend/src/routes/: +layout.svelte  +page.svelte
